--- a/src/vois/vuetify/Tests/multiSwitchTest.ipynb
+++ b/src/vois/vuetify/Tests/multiSwitchTest.ipynb
@@ -2,12 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "37a92a5f",
-   "metadata": {},
+   "execution_count": 1,
+   "id": "a6027533-96ee-4353-8d58-8d68a3bb5cc2",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run multiSwitch.py\n",
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "37a92a5f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e80eb191c57a451baa5e60611ff0e214",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Html(children=['Search in:'], class_='pa-0 ma-0 mt-2 mr-2', layout=None, tag='div'), Row(childr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0feca28ca1774f0e8a39df4cf67fff96",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%run ../multiSwitch.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "output = widgets.Output()\n",
@@ -117,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
