--- a/src/vois/vuetify/Tests/multiSwitchTest.ipynb
+++ b/src/vois/vuetify/Tests/multiSwitchTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a6027533-96ee-4353-8d58-8d68a3bb5cc2",
+   "execution_count": null,
+   "id": "a39138aa-b9f1-4124-bd21-4582f0009c4a",
    "metadata": {
     "tags": []
    },
@@ -14,41 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "37a92a5f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e80eb191c57a451baa5e60611ff0e214",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Html(children=['Search in:'], class_='pa-0 ma-0 mt-2 mr-2', layout=None, tag='div'), Row(childr…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0feca28ca1774f0e8a39df4cf67fff96",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ../multiSwitch.py\n",
     "\n",
@@ -62,7 +33,7 @@
     "\n",
     "t = multiSwitch([True, True, False], ['Title', 'Abstract', 'Keywords'], managedblclick=True,\n",
     "                tooltips=['Activate the search on paper title','Activate the search on paper abstract','Activate the search on paper keywords'], \n",
-    "                onchange=onchange, row=True, width=90, justify='start', color='blue', rounded=False, outlined=True,\n",
+    "                onchange=onchange, row=True, width=90, justify='start', rounded=False, outlined=True,\n",
     "                colorselected='#FFA300', colorunselected='#aaaaaa')\n",
     "\n",
     "display(widgets.HBox([v.Html(tag='div', children=['Search in:'], class_='pa-0 ma-0 mt-2 mr-2'),t.draw()]))\n",
@@ -71,39 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "12b42f71",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06f1a5120ee04898b831fa460b1cc774",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Html(children=['Search in:'], class_='pa-0 ma-0 mr-2', layout=None, tag='div'), Row(children=[H…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "113afa99f7c6471dad91ecbec0a42b77",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example with minimal size buttons\n",
     "%run multiSwitch.py\n",
