--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -185,7 +185,7 @@ menu widget
 multiSwitch widget
 ------------------
 
-.. automodule:: multiSwitch
+.. automodule:: MultiSwitch
     :members: 
 
 .. image:: figures/line.png
