--- a/src/vois/vuetify/Tests/multiSwitchTest.ipynb
+++ b/src/vois/vuetify/Tests/multiSwitchTest.ipynb
@@ -21,7 +21,9 @@
    },
    "outputs": [],
    "source": [
-    "%run ../multiSwitch.py\n",
+    "from vois.vuetify import MultiSwitch\n",
+    "\n",
+    "import ipyvuetify as v\n",
     "\n",
     "from ipywidgets import widgets\n",
     "output = widgets.Output()\n",
@@ -31,10 +33,10 @@
     "        print(value)\n",
     "\n",
     "\n",
-    "t = multiSwitch([True, True, False], ['Title', 'Abstract', 'Keywords'], managedblclick=True,\n",
+    "t = MultiSwitch([True, True, False], ['Title', 'Abstract', 'Keywords'], manage_dbl_click=True,\n",
     "                tooltips=['Activate the search on paper title','Activate the search on paper abstract','Activate the search on paper keywords'], \n",
-    "                onchange=onchange, row=True, width=90, justify='start', rounded=False, outlined=True,\n",
-    "                colorselected='#FFA300', colorunselected='#aaaaaa')\n",
+    "                on_change=onchange, row=True, width=90, justify='start', rounded=False, outlined=True,\n",
+    "                color_selected='#FFA300', color_unselected='#aaaaaa')\n",
     "\n",
     "display(widgets.HBox([v.Html(tag='div', children=['Search in:'], class_='pa-0 ma-0 mt-2 mr-2'),t.draw()]))\n",
     "display(output)"
@@ -44,11 +46,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "12b42f71",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Example with minimal size buttons\n",
-    "%run multiSwitch.py\n",
+    "from vois.vuetify import MultiSwitch\n",
     "\n",
     "from ipywidgets import widgets\n",
     "output = widgets.Output()\n",
@@ -58,10 +62,10 @@
     "        print(value)\n",
     "\n",
     "\n",
-    "t = multiSwitch([True, True, False], ['TI', 'AB', 'KW'], managedblclick=True,\n",
+    "t = MultiSwitch([True, True, False], ['TI', 'AB', 'KW'], managedblclick=True,\n",
     "                tooltips=['Activate the search on paper title','Activate the search on paper abstract','Activate the search on paper keywords'], \n",
-    "                onchange=onchange, row=True, width=10, height=18, justify='start', color='blue', rounded=False, outlined=True,\n",
-    "                colorselected='#FFA300', colorunselected='#aaaaaa', paddingrow=1, paddingcol=0, tile=False, xsmall=True)\n",
+    "                on_change=onchange, row=True, width=10, height=18, justify='start', ounded=False, outlined=True,\n",
+    "                color_selected='#FFA300', color_unselected='#aaaaaa', padding_row=1, padding_col=0, tile=False, x_small=True)\n",
     "\n",
     "display(widgets.HBox([v.Html(tag='div', children=['Search in:'], class_='pa-0 ma-0 mr-2'),t.draw()]))\n",
     "display(output)"
@@ -71,7 +75,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14f5a88e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "t.value"
