--- a/src/vois/vuetify/Tests/tabsTest.ipynb
+++ b/src/vois/vuetify/Tests/tabsTest.ipynb
@@ -9,6 +9,7 @@
    },
    "outputs": [],
    "source": [
+    "%run ../../development/load_local_vois.py -w\n",
     "%run ../tabs.py\n",
     "\n",
     "from ipywidgets import widgets\n",
@@ -28,19 +29,21 @@
     "    with debug:\n",
     "        print(value)\n",
     "\n",
-    "t = tabs(0, ['Label1', 'Label2 is a very long label', 'Label3 is also very long'],\n",
+    "t = Tabs(0, ['Label1', 'Label2 is a very long label', 'Label3 is also very long'],\n",
     "         contents=[output0,output1,output2],\n",
     "         tooltips=['Tooltip for label1'],\n",
     "         onchange=onchange, row=True, dark=False)\n",
     "\n",
-    "display(t.draw())"
+    "display(t)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7109ce00",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "t.value = 0"
@@ -50,7 +53,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ead97ee9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "t.disabled = True"
@@ -60,7 +65,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5b6df1d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "t.disabled"
@@ -103,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
