--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -366,10 +366,10 @@ Tabs widget
 
 .. image:: figures/line.png
 
-textlist widget
+TextList widget
 ---------------
 
-.. automodule:: textlist
+.. automodule:: TextList
     :members: 
 
 .. image:: figures/line.png
