--- a/src/vois/vuetify/Tests/textlistTest.ipynb
+++ b/src/vois/vuetify/Tests/textlistTest.ipynb
@@ -2,43 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8517d8fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96edaea2f066483b99d31b9b531b2d56",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[Layout(children=[Col(children=[Html(children=['Name'], class_='pa-0 ma-0', layout=None, style_=…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "%run textlist.py\n",
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f4f2a2b-9a40-4267-91b3-1e5660ba661e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from vois.vuetify import TextList\n",
     "\n",
-    "t = textlist(['Name', 'Surname', 'Address', 'Role'],\n",
+    "t = TextList(['Name', 'Surname', 'Address', 'Role'],\n",
     "             ['Davide', 'De Marchi', 'via Eduardo 34, Roccacannuccia (PE)', 'Software developer'],\n",
-    "             titlesbold=['Surname'],\n",
-    "             titlefontsize=14,\n",
-    "             textfontsize=16,\n",
-    "             titlecolumn=3,\n",
-    "             textcolumn=10,\n",
-    "             titlecolor='#003300',\n",
-    "             textcolor='#000000',\n",
-    "             lineheightfactor=1.4\n",
+    "             titles_bold=['Surname'],\n",
+    "             title_font_size=14,\n",
+    "             text_font_size=16,\n",
+    "             title_column=3,\n",
+    "             text_column=10,\n",
+    "             title_color='#003300',\n",
+    "             text_color='#000000',\n",
+    "             line_height_factor=1.4\n",
     "            )\n",
     "\n",
     "# Set some attributes of the card widget (margins, colors, width, etc.)\n",
-    "t.card.class_    = 'pa-0 ma-4 ml-6 mr-8'\n",
-    "t.card.flat      = False\n",
+    "t.class_    = 'pa-0 ma-4 ml-6 mr-8'\n",
+    "t.flat      = False\n",
     "t.card.color     = '#e0ffe0'\n",
     "t.card.elevation = 8\n",
     "t.card.width     = '430px'\n",
@@ -71,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
