--- a/src/vois/vuetify/Tests/rangeSliderTest.ipynb
+++ b/src/vois/vuetify/Tests/rangeSliderTest.ipynb
@@ -3,13 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0602961b",
-   "metadata": {},
+   "id": "45279de8-79f1-4dad-8f25-d92e961b4343",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run rangeSlider.py\n",
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0602961b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from vois.vuetify import RangeSlider\n",
     "\n",
-    "s = rangeSlider(5,18, 0,20)\n",
+    "s = RangeSlider(12,55, 10,70)\n",
     "s.draw()"
    ]
   },
@@ -17,17 +31,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "40557ad6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run rangeSlider.py\n",
+    "from vois.vuetify import RangeSlider\n",
     "from ipywidgets import widgets, Layout\n",
     "\n",
     "out = widgets.Output(layout=Layout(width='200px', height='84px'))\n",
     "\n",
-    "s = rangeSlider(5,18, 0,20, height=70, vertical=False)\n",
+    "s = RangeSlider(5,18, 0,20, height=70, vertical=False)\n",
     "with out:\n",
-    "    display(s.draw())\n",
+    "    display(s)\n",
     "    \n",
     "display(out)"
    ]
@@ -57,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
