Added horizontal flag to palettePickerEx widget

--- a/src/vois/vuetify/Tests/palettePickerExTest.ipynb
+++ b/src/vois/vuetify/Tests/palettePickerExTest.ipynb
@@ -27,7 +27,7 @@
     "        print(value)\n",
     "        \n",
     "\n",
-    "p = palettePickerEx(width=250, value='Turbo', interpolate=False, show_interpolate_switch=False, clearable=False, onchange=onchange, onchangeOpacity=onchangeOpacity)\n",
+    "p = palettePickerEx(width=250, value='Turbo', interpolate=False, show_interpolate_switch=False, clearable=False, onchange=onchange, onchangeOpacity=onchangeOpacity, horizontal=True)\n",
     "p.draw()"
    ]
   },
