Solved redis error in mapUtils.BDAPLayer

--- a/src/vois/geo/mapUtilsTest.ipynb
+++ b/src/vois/geo/mapUtilsTest.ipynb
@@ -2,28 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "87200c0b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a97e1274496a4b7ca5e4dcf1b1629ea3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[47, 12], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_tex…"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import widgets, Layout\n",
     "\n",
@@ -105,24 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5357a6d1-c8ef-4936-8508-efaef0f2ffb1",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(TileLayer(attribution='', base=True, max_zoom=21, min_zoom=1, name='Gisco.OSMCartoV4Composite', options=['attribution', 'bounds', 'detect_retina', 'max_native_zoom', 'max_zoom', 'min_native_zoom', 'min_zoom', 'no_wrap', 'tile_size', 'tms', 'zoom_offset'], url='https://gisco-services.ec.europa.eu/maps/tiles/OSMCartoV4Composite/EPSG3857/{z}/{x}/{y}.png'),\n",
-       " TileLayer(attribution='', max_zoom=21, min_zoom=1, name='Labels', options=['attribution', 'bounds', 'detect_retina', 'max_native_zoom', 'max_zoom', 'min_native_zoom', 'min_zoom', 'no_wrap', 'tile_size', 'tms', 'zoom_offset'], url='https://gisco-services.ec.europa.eu/maps/tiles/OSMCartoV4Labels/EPSG3857/{z}/{x}/{y}.png'))"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "m.layers"
    ]
@@ -131,6 +103,33 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "45459042-2031-4b83-b18a-87cc4577cefe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BDAP example\n",
+    "%run mapUtils.py\n",
+    "\n",
+    "from jeodpp import inter\n",
+    "\n",
+    "p = inter.ImageCollection('DEM').process()\n",
+    "p.parameter('mode','hillshade')\n",
+    "p.parameter('interpolate','Bilinear')\n",
+    "layer = BDAPLayer(p)\n",
+    "\n",
+    "m = ipyleaflet.Map(max_zoom=21, center=[47, 12], zoom=5,\n",
+    "                   scroll_wheel_zoom=True,\n",
+    "                   basemap=EsriWorldImagery(),\n",
+    "                   attribution_control=False, layout=Layout(height='650px'))\n",
+    "\n",
+    "addLayer(m, layer, name='DEM')\n",
+    "\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7145926c-dd55-4a4c-abf2-09542a6bde2c",
    "metadata": {},
    "outputs": [],
    "source": []
