--- a/src/vois/vuetify/Tests/tabsTest.ipynb
+++ b/src/vois/vuetify/Tests/tabsTest.ipynb
@@ -2,15 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fcf77851",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b76c57038cd24188b24dd573331a336a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ba487e09d5234ad3ba2253a3bc981f4d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tabs(background_color='white', children=[TabsSlider(color='#f8bd1a', layout=None), Item(children=[Tooltip(bott…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ../../development/load_local_vois.py -w\n",
-    "%run ../tabs.py\n",
+    "%run ../Tabs.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "\n",
@@ -32,7 +61,7 @@
     "t = Tabs(0, ['Label1', 'Label2 is a very long label', 'Label3 is also very long'],\n",
     "         contents=[output0,output1,output2],\n",
     "         tooltips=['Tooltip for label1'],\n",
-    "         onchange=onchange, row=True, dark=False)\n",
+    "         onchange=onchange, row=False, dark=False)\n",
     "\n",
     "display(t)"
    ]
@@ -110,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
