--- a/src/vois/vuetify/Tests/treeviewTest.ipynb
+++ b/src/vois/vuetify/Tests/treeviewTest.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "77e8d097",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import ipyvuetify as v\n",
@@ -14,12 +16,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d6f1c435-fd0e-4cd9-abf8-6372b70406e6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "52fb9a9e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TREEVIEW CREATED FROM A HIERARCHICAL LIST OF STRINGS\n",
-    "%run treeview.py\n",
+    "from vois.vuetify import treeview\n",
     "\n",
     "def on_change(arg):\n",
     "    print(arg)\n",
@@ -27,7 +43,7 @@
     "def on_activated(arg):\n",
     "    print(arg)\n",
     "\n",
-    "treecard = createTreeviewFromList(['A','A.1','A.2','A.1.1','A.3.1','A.4.1.2','A.5.2.1','A.4.2.3.1','B','B.A'], separator='.', rootName='Root', expand_selection_to_parents=False, \n",
+    "treecard = treeview.createTreeviewFromList(['A','A.1','A.2','A.1.1','A.3.1','A.4.1.2','A.5.2.1','A.4.2.3.1','B','B.A'], separator='.', rootName='Root', expand_selection_to_parents=False, \n",
     "                                  substitutionDict={'A.1': 'A.1 new name'}, color='green', dark=False, width='500px', height='350px', on_change=on_change, on_activated=on_activated,\n",
     "                                  selectable=True, activatable=False, opened=['Root', 'A', 'A.3'], displayfullname=True, #active='A.2', \n",
     "                                  disabled=['A.1', 'A.3'], tooltips=True, tooltips_chars=0, iconsshow=True, iconscolor='green', open_on_click=True,\n",
@@ -647,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
