Fixed display of card, cardsGrid and treeview widgets (templated)

--- a/src/vois/vuetify/Tests/treeviewTest.ipynb
+++ b/src/vois/vuetify/Tests/treeviewTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "77e8d097",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d6f1c435-fd0e-4cd9-abf8-6372b70406e6",
    "metadata": {
     "tags": []
@@ -27,12 +27,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "52fb9a9e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f06965a36a7a4e00abaccc0230619188",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style id=\"treeview-item-style\">\\n\\n.vuetify-styles .v-treeview-node__root {\\n    padding-left: …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "889aca8dc3a949a4a6f26c08d201e9d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(color='#f8bd1a', events=['activate', 'change_selection', 'onopeni…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# SIMPLE TREEVIEW TO TEST THE NEW STYLING FUNCTIONS\n",
+    "from ipywidgets import widgets, Layout, HTML\n",
+    "from IPython.display import display\n",
+    "\n",
+    "from vois.vuetify import treeview\n",
+    "from importlib import reload\n",
+    "reload(treeview)\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "table = [['parent', 'child'], ['John', 'Mary'], ['John', 'Peter'], \n",
+    "                              ['Ann', 'Hellen'], ['Ann', 'Sue'], ['Ann', 'Claire']]\n",
+    "headers = table.pop(0)\n",
+    "df = pd.DataFrame(table, columns=headers)\n",
+    "#display(df)\n",
+    "\n",
+    "def on_change(arg):\n",
+    "    print(arg)\n",
+    "\n",
+    "treecard = treeview.createTreeviewFromDF2Columns(df, headers[0], headers[1], \n",
+    "                                                 rootName='Families',\n",
+    "                                                 on_change=on_change)\n",
+    "\n",
+    "# Access the tree widget\n",
+    "tree = treecard.children[0].children[0]\n",
+    "\n",
+    "# Execute styling commands\n",
+    "display(HTML(tree.style))\n",
+    "\n",
+    "display(treecard)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "39486279-c29b-4547-be24-1e7c90bb10cb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n<style id=\"treeview-item-style\">\\n\\n.vuetify-styles .v-treeview-node__root {\\n    padding-left: 0px;\\n    padding-right: 0px;\\n}\\n.vuetify-styles .v-treeview--dense .v-treeview-node__root {\\n    min-height: 24px;\\n    font-size: 15px;\\n}\\n.vuetify-styles .v-application--is-ltr .v-treeview-node__checkbox {\\n    margin-left: 0px;\\n    margin-right: 0px;\\n}\\n\\n.vuetify-styles .v-treeview-node__checkbox {\\n    width: 24px;\\n}\\n.vuetify-styles .v-icon.v-icon {\\n    font-size: 18px;\\n}\\n\\n</style>\\n'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(tree.style)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "fba7bedc-8b26-46dd-9e91-4380c56f4a07",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c0388028c0349f8853aa6685216333c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style id=\"treeview-item-style\">\\n\\n.vuetify-styles .v-treeview-node__root {\\n    padding-left: …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b779487c8d444e29190fec3a5042b55",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(color='green', events=['activate', 'change_selection', 'onopening…"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TREEVIEW CREATED FROM A HIERARCHICAL LIST OF STRINGS\n",
     "from vois.vuetify import treeview\n",
@@ -48,19 +170,41 @@
     "                                  selectable=True, activatable=False, opened=['Root', 'A', 'A.3'], displayfullname=True, #active='A.2', \n",
     "                                  disabled=['A.1', 'A.3'], tooltips=True, tooltips_chars=0, iconsshow=True, iconscolor='green', open_on_click=True,\n",
     "                                  iconsDict={'A.2': 'mdi-fire', 'A.4.1.2': 'mdi-anchor'}, iconsfolder=True, select_all=False, selected=['A.1.1','A.3.1','A.4.1.2','A.5.2.1'],\n",
-    "                                 ) #font_size=12, item_height=18, checkbox_size=20, icon_size=20)\n",
+    "                                  font_size=12, item_height=18, checkbox_size=20, icon_size=20)\n",
+    "# Access the tree widget\n",
+    "tree = treecard.children[0].children[0]\n",
+    "\n",
+    "# Execute styling commands\n",
+    "display(HTML(tree.style))\n",
+    "\n",
     "treecard"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "3ff0703d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "26d2350b0636484db971fe2460681e1c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(activatable=True, color='green', events=['activate', 'change_sele…"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# FLAT TREEVIEW CREATED FROM A LIST OF STRINGS\n",
-    "%run treeview.py\n",
+    "from vois.vuetify import treeview\n",
     "\n",
     "def on_change(arg):\n",
     "    print('Selected: ', arg)\n",
@@ -68,7 +212,7 @@
     "def on_activated(arg):\n",
     "    print('Active: ', arg)\n",
     "    \n",
-    "treecard = createFlatTreeview(['A','B','C','D','E'], \n",
+    "treecard = treeview.createFlatTreeview(['A','B','C','D','E'], \n",
     "                              color='green', dark=False, width='500px', height='120px',\n",
     "                              selectable=True, activatable=True, displayfullname=True, \n",
     "                              select_all=False, selected=['B','D'],\n",
@@ -79,12 +223,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "1995c26e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "287fac64b976489c83d5d6ca1c8b4d42",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(activatable=True, active=2, color='#f8bd1a', events=['activate', …"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%run treeview.py\n",
+    "from vois.vuetify import treeview\n",
     "\n",
     "root = 'Layers'\n",
     "\n",
@@ -121,7 +281,7 @@
     "        selection = active\n",
     "    print(selection)\n",
     "    \n",
-    "treecard = createTreeviewFromList(layers,\n",
+    "treecard = treeview.createTreeviewFromList(layers,\n",
     "                                  rootName=root,\n",
     "                                  displayfullname=False,\n",
     "                                  opened_all=True,\n",
@@ -133,7 +293,7 @@
     "                                  open_on_click=True,\n",
     "                                  width='400px',\n",
     "                                  height='600px')\n",
-    "top = treeviewOperations(treecard)\n",
+    "top = treeview.treeviewOperations(treecard)\n",
     "treecard"
    ]
   },
@@ -663,7 +823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
