--- a/src/vois/vuetify/Tests/cardsGridTest.ipynb
+++ b/src/vois/vuetify/Tests/cardsGridTest.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fe53e15f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run cardsGrid.py\n",
+    "%run ../cardsGrid.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -43,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run cardsGrid.py\n",
+    "%run ../cardsGrid.py\n",
     "from IPython.display import display\n",
     "\n",
     "themes = ['Data Transfer & Exchange',\n",
@@ -92,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
