--- a/src/vois/vuetify/Tests/palettePickerExTest.ipynb
+++ b/src/vois/vuetify/Tests/palettePickerExTest.ipynb
@@ -2,12 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3e34f125",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "626efbfe9d21431b9c82d4c89c639106",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04537bfd428243da80a312c66aa1977d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HBox(children=(sliderFloat(children=[Html(children=['Opacity:'], class_='pa-0 ma-0 mt-4', layou…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%run ../../development/load_local_vois.py -w\n",
     "\n",
@@ -95,9 +125,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [interapro_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-interapro_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -109,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
